--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <!--
 To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
@@ -8,46 +8,137 @@ and open the template in the editor.
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
     <head>
-        <title>Personas</title>
+        <title>Librería</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <link href="../static/css/index.css" th:href="@{/css/index.css}" rel="stylesheet" />
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div class="container"> 
-            <div th:switch="${list}">
-                <h2 th:if="${list.isEmpty}">No hay personas</h2>
-                <div th:if="${!list.isEmpty}">
-                    <h2>Personas</h2>
-                    <table class="table">
-                        <thead>
-                            <tr>
-                                <th scope="col">Nombre</th>
-                                <th scope="col">Apellido</th>
-                                <th scope="col">Dirección</th>
-                                <th scope="col">Teléfono</th>
-                                <th scope="col"></th>
-                                <th scope="col"></th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr th:each="persona : ${list}">
-                                <td th:text="${persona.nombre}"></td>
-                                <td th:text="${persona.apellido}"></td>
-                                <td th:text="${persona.direccion}"></td>
-                                <td th:text="${persona.telefono}"></td>
-                                <td><a th:href="@{/update-user/{id}(id=${persona.id})}" class="btn btn-primary">Editar</a></td>
-                                <td><a th:href="@{/delete/{id}(id=${persona.id})}" class="btn btn-primary">Borrar</a></td> 
-                            </tr>
-                        </tbody>
-                    </table>
+        <div class="container">
+            <nav class="navbar navbar-dark bg-dark navbar-expand-lg shadow-lg p-3 mb-5 rounded fixed-top">
+                <a class="navbar-brand" href="#">
+                    <img src="https://cdn-icons-png.flaticon.com/512/815/815283.png" width="30" height="30" alt="">
+                </a>
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#">Navegación</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" th:href="@{/catalogo}">Catágolo</a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Dropdown
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" href="#">Action</a></li>
+                                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                                    <li><hr class="dropdown-divider"></li>
+                                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                </ul>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link disabled">Disabled</a>
+                            </li>
+                        </ul>
+                        <form class="d-flex">
+                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                            <button class="btn btn-outline-success" type="submit">Search</button>
+                        </form>
+                    </div>
+                </div>
+            </nav>
+            <div class="row">
+                <div class="col">
+                    <h1 class="sentence">
+                        Libros y Comics
+                        <small class="text-muted">al mejor precio</small>
+                    </h1>
+                    <blockquote class="blockquote mt-5">
+                        <p>Cada libro, cada volumen que ves aquí, tiene un alma. El alma de la persona que lo escribió y de aquellos que lo leyeron, vivieron y soñaron con él. Cada vez que un libro cambia de manos, cada vez que alguien baja sus ojos a las páginas, su espíritu crece y se fortalece </p>
+                        <footer class="blockquote-footer mt-2">Carlos Ruiz Zafón <cite title="Source Title">La Sombra del Viento</cite></footer>
+                    </blockquote>
+                </div>
+                <div class="col">
+                    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-indicators">
+                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                        </div>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="https://cdn.shopify.com/s/files/1/0095/9840/2656/products/fiction-star-wars-junior-novel-5-books-children-collection-paperback-set-by-jedi-1.jpg?v=1611372164" class="img-fluid" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="https://shereads.com/wp-content/uploads/2020/02/kin-gbooks.jpg" class="img-fluid" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="https://c1.iggcdn.com/indiegogo-media-prod-cld/image/upload/c_limit,w_695/v1601737634/kdfppzmznb310461cafw.jpg" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
                 </div>
             </div>
-            <div>
-                <a href="/adduser" class="btn btn-primary">Agregar</a>
+            <div class="imagen-fondo">
+                <h1 class="text-center">Agregados recientemente</h1>
             </div>
+            <div class="row nuevos">
+                <div class="col-sm">
+                    <img src="https://d28hgpri8am2if.cloudfront.net/book_images/onix/cvr9781476761374/world-of-warcraft-dawn-of-the-aspects-9781476761374_hr.jpg" class="img-fluid" alt="...">
+                </div>
+                <div class="col-sm">
+                    <img src="https://images-na.ssl-images-amazon.com/images/I/A1a-wgltdoL.jpg" class="img-fluid" alt="...">
+                </div>
+                <div class="col-sm">
+                    <img src="https://bnetcmsus-a.akamaihd.net/cms/content_entry_media/bc/BC3WS615K3AJ1619022587558.jpg" class="img-fluid" alt="...">
+                </div>
+            </div>
+            <div class="imagen-fondo2">
+                <h1 class="text-center">Destacados</h1>
+            </div>
+            <div class="row destacados">
+                <div class="col-sm">
+                    <img src="https://d28hgpri8am2if.cloudfront.net/book_images/onix/cvr9781476761374/world-of-warcraft-dawn-of-the-aspects-9781476761374_hr.jpg" class="img-fluid" alt="...">
+                </div>
+                <div class="col-sm">
+                    <img src="https://images-na.ssl-images-amazon.com/images/I/A1a-wgltdoL.jpg" class="img-fluid" alt="...">
+                </div>
+                <div class="col-sm">
+                    <img src="https://bnetcmsus-a.akamaihd.net/cms/content_entry_media/bc/BC3WS615K3AJ1619022587558.jpg" class="img-fluid" alt="...">
+                </div>
+            </div>
+            <footer class="page-footer font-small mt-5 shadow-lg bg-secondary rounded">
+                <div class="footer-copyright text-center py-3 ">© 2020 Copyright:
+                    <a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
+                </div>
+                <img src="https://www.blackstarsolutions.co.uk/app/themes/blackstar/dist/images/left-graphic.png" class="img-fluid" alt="...">
+            </footer>
         </div>
+        <canvas class="background"></canvas>
+        <script type="text/javascript" th:src="@{js/particles.js-master/dist/particles.min.js}"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     </body>
-
 </html>
+<script>
+      window.onload = function() {
+        Particles.init({
+            selector: '.background'
+        });
+    };
+</script>
