--- a/src/main/resources/templates/catalogue-list.html
+++ b/src/main/resources/templates/catalogue-list.html
@@ -1,13 +1,12 @@
-<!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Compra</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link href="../static/css/buy.css" th:href="@{/css/buy.css}" rel="stylesheet"/>
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Categoría</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="../static/css/catalogue-list.css" th:href="@{/css/catalogue-list.css}" rel="stylesheet"/>
 </head>
 <body>
 <div class="container">
@@ -55,29 +54,32 @@
             </div>
         </div>
     </nav>
-    <div class="row cont">
-        <div class="col">
-            <div class="articulo">
-                <img class="shadow-img w3-animate-bottom" th:src="@{${libro.photosImagePath}}">
-            </div>
-        </div>
-        <div class="col col-right">
-            <h2 th:text="${libro.titulo}"></h2>
-            <blockquote class="blockquote mt-5">
-                <p th:text="${libro.descripcion}"></p>
-                <footer class="blockquote-footer mt-2" th:text="${libro.autor.nombre}">Carlos Ruiz Zafón</footer>
-            </blockquote>
-            <hr>
-            <h4 th:text="'Categoría: '+${libro.categoria.nombre}" class="mt-5"></h4>
-            <h4 th:text="'Cantidad disponible: '+${libro.cantidad}" class="mt-2"></h4>
-            <h4 th:text="'Precio: $'+${libro.precio}" class="mt-2"></h4>
-            <button class="btn btn-dark btn-add btn-lg"> Agregar al carrito </button>
-        </div>
+    <div class="category">
+        <h1 th:text="${categoria}"></h1>
     </div>
-    <div class="img-top">
-        <img src="https://www.pngitem.com/pimgs/m/181-1813104_manual-of-golems-magic-book-fantasy-drawing-hd.png"
-             class="img-fluid">
-    </div>
+
+    <table class="table">
+        <thead class="thead-dark">
+        <tr>
+            <th scope="col">#</th>
+            <th scope="col">Titulo</th>
+            <th scope="col">Cantidad</th>
+            <th scope="col">Autor</th>
+            <th scope="col">Detalles</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="libro : ${libros}">
+            <th scope="row" th:text="${libro.id}"></th>
+            <td th:text="${libro.titulo}">Mark</td>
+            <td th:text="${libro.cantidad}">Otto</td>
+            <td th:text="${libro.autor.nombre}">@mdo</td>
+            <td><a th:href="@{'/catalogo/buy/'+${libro.id}}" class="btn btn-secondary d-block mx-auto mt-1"
+                   role="button">Detalles</a></td>
+        </tr>
+        </tbody>
+    </table>
+
     <footer class="page-footer font-small mt-5 shadow-lg bg-secondary rounded">
         <div class="footer-copyright text-center py-3 ">© 2020 Copyright:
             <a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
@@ -93,10 +95,3 @@
         crossorigin="anonymous"></script>
 </body>
 </html>
-<script>
-      window.onload = function() {
-        Particles.init({
-            selector: '.background'
-        });
-    };
-</script>
