--- a/src/main/resources/templates/crud.html
+++ b/src/main/resources/templates/crud.html
@@ -1,11 +1,9 @@
-<!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Compra</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link href="../static/css/buy.css" th:href="@{/css/buy.css}" rel="stylesheet"/>
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <title>Librería</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="../static/css/crud.css" th:href="@{/css/crud.css}" rel="stylesheet" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -55,29 +53,52 @@
             </div>
         </div>
     </nav>
-    <div class="row cont">
-        <div class="col">
-            <div class="articulo">
-                <img class="shadow-img w3-animate-bottom" th:src="@{${libro.photosImagePath}}">
-            </div>
+    <h1 th:text="${accion}" class="action"></h1>
+    <form th:action="@{/form/book/{id}(id=${libro.id})}" method="post" th:object="${libro}" enctype="multipart/form-data">
+        <div class="form-group">
+            <label for="titulo">Título: </label>
+            <input type="text" class="form-control" id="titulo" th:field="*{titulo}">
         </div>
-        <div class="col col-right">
-            <h2 th:text="${libro.titulo}"></h2>
-            <blockquote class="blockquote mt-5">
-                <p th:text="${libro.descripcion}"></p>
-                <footer class="blockquote-footer mt-2" th:text="${libro.autor.nombre}">Carlos Ruiz Zafón</footer>
-            </blockquote>
-            <hr>
-            <h4 th:text="'Categoría: '+${libro.categoria.nombre}" class="mt-5"></h4>
-            <h4 th:text="'Cantidad disponible: '+${libro.cantidad}" class="mt-2"></h4>
-            <h4 th:text="'Precio: $'+${libro.precio}" class="mt-2"></h4>
-            <button class="btn btn-dark btn-add btn-lg"> Agregar al carrito </button>
+        <div class="form-group">
+            <label for="autor">Autor: </label>
+            <select class="form-select" aria-label="Default select example" id="autor" th:field="*{autor}">
+                <option th:each="autor : ${autores}" th:value="${autor.id}" th:text="${autor.nombre}"></option>
+            </select>
         </div>
-    </div>
-    <div class="img-top">
-        <img src="https://www.pngitem.com/pimgs/m/181-1813104_manual-of-golems-magic-book-fantasy-drawing-hd.png"
-             class="img-fluid">
-    </div>
+        <div class="form-group">
+            <label for="imagen">Imagen: </label>
+            <input type="file" accept="image/png, image/jpeg" class="form-control" id="archivo" name="archivo">
+        </div>
+
+        <div>
+            <input type="hidden" class="form-control" id="imagen" th:field="*{rutaImg}" name="imagen">
+        </div>
+
+        <div class="form-group">
+            <label for="precio">Precio: </label>
+            <input type="number" class="form-control" id="precio" th:field="*{precio}">
+        </div>
+        <div class="form-group">
+            <label for="fechaLanzamiento">Fecha de lanzamiento: </label>
+            <input type="date" class="form-control" id="fechaLanzamiento" th:field="*{lanzamiento}">
+        </div>
+        <div class="form-group">
+            <label for="categoria">Categoria: </label>
+            <select class="form-select" aria-label="Default select example" id="categoria" th:field="*{categoria}">
+                <option th:each="categoria : ${categorias}" th:value="${categoria.id}" th:text="${categoria.nombre}"></option>
+            </select>
+        </div>
+        <div class="form-group">
+            <label for="stock">Stock disponible: </label>
+            <input type="number" class="form-control" id="stock" th:field="*{cantidad}">
+        </div>
+        <div class="form-group">
+            <label for="descripcion">Descripción: </label>
+            <textarea class="form-control" id="descripcion" rows="5" th:field="*{descripcion}"></textarea>
+        </div>
+        <button class="btn btn-dark" type="reset" style="...">Resetear</button>
+        <button class="btn btn-dark" type="submit" style="...">Guardar</button>
+    </form>
     <footer class="page-footer font-small mt-5 shadow-lg bg-secondary rounded">
         <div class="footer-copyright text-center py-3 ">© 2020 Copyright:
             <a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
@@ -93,10 +114,3 @@
         crossorigin="anonymous"></script>
 </body>
 </html>
-<script>
-      window.onload = function() {
-        Particles.init({
-            selector: '.background'
-        });
-    };
-</script>
