--- a/src/main/resources/templates/catalogue.html
+++ b/src/main/resources/templates/catalogue.html
@@ -36,7 +36,7 @@ and open the template in the editor.
                                     Dropdown
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <li><a class="dropdown-item" href="#">Action</a></li>
+                                    <li><a class="dropdown-item" th:href="@{/form/book/0}">Action</a></li>
                                     <li><a class="dropdown-item" href="#">Another action</a></li>
                                     <li><hr class="dropdown-divider"></li>
                                     <li><a class="dropdown-item" href="#">Something else here</a></li>
