--- a/src/main/resources/templates/crud.html
+++ b/src/main/resources/templates/crud.html
@@ -2,8 +2,9 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <title>Librería</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link href="../static/css/crud.css" th:href="@{/css/crud.css}" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="../static/css/crud.css" th:href="@{/css/crud.css}" rel="stylesheet"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -34,7 +35,7 @@
                             Dropdown
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" th:href="@{/form/book/0}"</a></li>
                             <li><a class="dropdown-item" href="#">Another action</a></li>
                             <li>
                                 <hr class="dropdown-divider">
@@ -53,51 +54,78 @@
             </div>
         </div>
     </nav>
-    <h1 th:text="${accion}" class="action"></h1>
-    <form th:action="@{/form/book/{id}(id=${libro.id})}" method="post" th:object="${libro}" enctype="multipart/form-data">
-        <div class="form-group">
-            <label for="titulo">Título: </label>
-            <input type="text" class="form-control" id="titulo" th:field="*{titulo}">
-        </div>
-        <div class="form-group">
-            <label for="autor">Autor: </label>
-            <select class="form-select" aria-label="Default select example" id="autor" th:field="*{autor}">
-                <option th:each="autor : ${autores}" th:value="${autor.id}" th:text="${autor.nombre}"></option>
-            </select>
-        </div>
-        <div class="form-group">
-            <label for="imagen">Imagen: </label>
-            <input type="file" accept="image/png, image/jpeg" class="form-control" id="archivo" name="archivo">
+
+    <form th:action="@{/form/book/{id}(id=${libro.id})}" method="post" th:object="${libro}"
+          enctype="multipart/form-data">
+
+        <div class="row row-width">
+            <h1 th:text="${accion}" class="action mb-3"></h1>
+            <div class="col">
+                <div class="form-group">
+                    <label for="titulo">Título: </label>
+                    <input type="text" class="form-control" id="titulo" th:field="*{titulo}">
+                </div>
+            </div>
+            <div class="col">
+                <div class="form-group">
+                    <label for="autor">Autor: </label>
+                    <select class="form-select" aria-label="Default select example" id="autor" th:field="*{autor}">
+                        <option th:each="autor : ${autores}" th:value="${autor.id}" th:text="${autor.nombre}"></option>
+                    </select>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="imagen">Imagen: </label>
+                <input type="file" accept="image/png, image/jpeg" class="form-control" id="archivo" name="archivo">
+            </div>
+
+            <div>
+                <input type="hidden" class="form-control" id="imagen" th:field="*{rutaImg}" name="imagen">
+            </div>
+            <div class="col-6">
+                <div class="form-group">
+                    <label for="precio">Precio: </label>
+                    <input type="number" class="form-control" id="precio" th:field="*{precio}">
+                </div>
+            </div>
+            <div class="col-6">
+                <div class="form-group">
+                    <label for="fechaLanzamiento">Fecha de lanzamiento: </label>
+                    <input type="date" class="form-control" id="fechaLanzamiento" th:field="*{lanzamiento}">
+                </div>
+            </div>
+            <div class="col-6">
+                <div class="form-group">
+                    <label for="categoria">Categoria: </label>
+                    <select class="form-select" aria-label="Default select example" id="categoria" th:field="*{categoria}">
+                        <option th:each="categoria : ${categorias}" th:value="${categoria.id}"
+                                th:text="${categoria.nombre}"></option>
+                    </select>
+                </div>
+            </div>
+            <div class="col-6">
+                <div class="form-group">
+                    <label for="stock">Stock disponible: </label>
+                    <input type="number" class="form-control" id="stock" th:field="*{cantidad}">
+                </div>
+            </div>
+
+
+
+            <div class="form-group">
+                <label for="descripcion">Descripción: </label>
+                <textarea class="form-control" id="descripcion" rows="5" th:field="*{descripcion}"></textarea>
+            </div>
+            <div class="form-group mt-2 d-grid gap-2 d-md-flex justify-content-md-end">
+                <button class="btn btn-secondary" type="reset" style="...">Resetear</button>
+                <button class="btn btn-dark" type="submit" style="...">Guardar</button>
+            </div>
         </div>
 
-        <div>
-            <input type="hidden" class="form-control" id="imagen" th:field="*{rutaImg}" name="imagen">
-        </div>
 
-        <div class="form-group">
-            <label for="precio">Precio: </label>
-            <input type="number" class="form-control" id="precio" th:field="*{precio}">
+        <div class="img-bottom">
+            <img src="https://pngimg.com/uploads/spider_man/spider_man_PNG48.png">;
         </div>
-        <div class="form-group">
-            <label for="fechaLanzamiento">Fecha de lanzamiento: </label>
-            <input type="date" class="form-control" id="fechaLanzamiento" th:field="*{lanzamiento}">
-        </div>
-        <div class="form-group">
-            <label for="categoria">Categoria: </label>
-            <select class="form-select" aria-label="Default select example" id="categoria" th:field="*{categoria}">
-                <option th:each="categoria : ${categorias}" th:value="${categoria.id}" th:text="${categoria.nombre}"></option>
-            </select>
-        </div>
-        <div class="form-group">
-            <label for="stock">Stock disponible: </label>
-            <input type="number" class="form-control" id="stock" th:field="*{cantidad}">
-        </div>
-        <div class="form-group">
-            <label for="descripcion">Descripción: </label>
-            <textarea class="form-control" id="descripcion" rows="5" th:field="*{descripcion}"></textarea>
-        </div>
-        <button class="btn btn-dark" type="reset" style="...">Resetear</button>
-        <button class="btn btn-dark" type="submit" style="...">Guardar</button>
     </form>
     <footer class="page-footer font-small mt-5 shadow-lg bg-secondary rounded">
         <div class="footer-copyright text-center py-3 ">© 2020 Copyright:
